...
    <!--          Giris sayfasi       -->
    <string name="Toast_giris">Alanlar boş</string>
    <string name="Toast_giris_2">Kayıt başarılı</string>
    <string name="Toast_giris_3">Bu kullanıcı adı ya da e-posta zaten kayıtlı</string>
    <string name="Toast_giris_4">Parola eşleşmiyor</string>
    <string name="Toast_giris_5">Yanlış kullanıcı adı, e-posta veya şifre</string>
    <string name="kayit">KAYIT</string>
    <string name="sifre_tekrar">Şifre tekrar</string>
    <string name="sifre">Şifre</string>
    <string name="giri_i_in_nce_kay_t">Giriş için önce kayıt!</string>
    <string name="g_r">GİRİŞ</string>
    <string name="kullanici_adi">Mail/Kullanıcı adı</string>

...
